Opened 12 years ago
Closed 12 years ago
#9888 closed bug (fixed)
[easy] IconUtils: correct warnings
Reported by: | kallisti5 | Owned by: | nobody |
---|---|---|---|
Priority: | low | Milestone: | Unscheduled |
Component: | System | Version: | R1/Development |
Keywords: | easy | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
C++ ../../../generated/objects/haiku/x86/release/libs/icon/IconUtils.o ../../libs/icon/IconUtils.cpp: In static member function 'static status_t BIconUtils::ConvertFromCMAP8(const uint8*, uint32, uint32, uint32, BBitmap*)': ../../libs/icon/IconUtils.cpp:649:48: warning: suggest parentheses around '&&' within '||' [-Wparentheses] ../../libs/icon/IconUtils.cpp:650:48: warning: suggest parentheses around '&&' within '||' [-Wparentheses] ../../libs/icon/IconUtils.cpp:651:48: warning: suggest parentheses around '&&' within '||' [-Wparentheses]
Note:
See TracTickets
for help on using tickets.
I must have missed this compiler warning, fixed in hrev45893, thanks kallisti5.