IconUtils: Add parens to fix warnings

Fixes #9888